--- a/template/templateDetails.xml
+++ b/template/templateDetails.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <extension type="template" version="3.8" client="site" method="upgrade">
-  <name>XT Tailwind CSS</name>
+  <name>XT Tailwind CSS for MejorConJoomla</name>
   <version>2.0.0</version>
-  <creationDate>2019-03-29</creationDate>
+  <creationDate>2019-05-10</creationDate>
 
 	<author>Extly, CB</author>
 	<authorEmail>team@extly.com</authorEmail>
